force-app/main/default/objects/Album__c/fields/AlbumTrack__c.field-meta.xml
<CustomField>
    <fullName>AlbumTrack__c</fullName>
    <label>AlbumTrack</label>
    <referenceTo>AlbumTrack__c</referenceTo>
    <relationshipLabel>Albums</relationshipLabel>
    <relationshipName>Albums</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>