force-app/main/default/objects/Album__c/fields/Genres__c.field-meta.xml
<CustomField>
    <fullName>Genres__c</fullName>
    <label>Genres</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GlobalGenres</valueSetName>
    </valueSet>
</CustomField>