force-app/main/default/objects/Album__c/fields/ReleaseDate__c.field-meta.xml
<CustomField>
    <fullName>ReleaseDate__c</fullName>
    <label>ReleaseDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>