force-app/main/default/objects/Album__c/fields/TotalTracks__c.field-meta.xml
<CustomField>
    <fullName>TotalTracks__c</fullName>
    <label>TotalTracks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>